--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
           <div class="flex gap-3">
             <button id="resetTimer" class="flex-1 py-4 bg-zinc-950 border border-zinc-800 text-neutral-400 text-xl active:bg-zinc-900">⟳</button>
-            <button id="startPause" class="flex-1 py-4 bg-gradient-to-b from-red-700 to-red-900 border-none text-white font-extrabold text-xl tracking-wider shadow-lg shadow-red-900/50 active:from-red-800 active:to-red-950">▶</button>
+            <button id="startPause" class="flex-1 py-4 bg-gradient-to-b from-red-700 to-red-900 border-none text-white font-extrabold text-xl tracking-wider shadow-lg shadow-red-900/50 active:from-red-800 active:to-red-950"><i class="fa-solid fa-play"></i></button>
           </div>
         </div>
       </section>
